package com.mypresentpast.backend.enums;

/**
 * Tipos de instituciones que pueden solicitar verificación.
 */
public enum InstitutionType {
    /**
     * Universidad o institución de educación superior.
     */
    UNIVERSITY,
    
    /**
     * Escuela, colegio o institución de educación primaria/secundaria.
     */
    SCHOOL,
    
    /**
     * Museo o institución cultural.
     */
    MUSEUM,
    
    /**
     * Entidad gubernamental o pública.
     */
    GOVERNMENT,
    
    /**
     * Organización no gubernamental.
     */
    NGO,
    
    /**
     * Biblioteca pública o privada.
     */
    LIBRARY,
    
    /**
     * Centro de investigación o instituto científico.
     */
    RESEARCH,
    
    /**
     * Otro tipo de institución no especificada.
     */
    OTHER
}
